--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,12 +15,26 @@
         android:contentDescription="@string/logo"
         android:src="@drawable/logo" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="94dp"
+        android:fontFamily="cursive"
+        android:lineSpacingExtra="36sp"
+        android:text="@string/transportation_inc"
+        android:textColor="#D3B53D"
+        android:textSize="36sp"
+        android:typeface="monospace" />
+
     <EditText
         android:id="@+id/editText"
         android:layout_width="200dp"
         android:layout_height="40dp"
+        android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="74dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_user"
         android:ems="10"
@@ -34,7 +48,7 @@
         android:layout_height="40dp"
         android:layout_alignStart="@+id/editText"
         android:layout_below="@+id/editText"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="36dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_pass"
         android:ems="10"
@@ -48,7 +62,7 @@
         android:layout_height="50dp"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="58dp"
         app:cardBackgroundColor="@android:color/holo_red_light"
         app:cardCornerRadius="25dp"
         app:cardElevation="10dp">
@@ -58,7 +72,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -70,12 +83,10 @@
     </android.support.v7.widget.CardView>
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="34dp"
         android:text="@string/register_here" />
-
 </RelativeLayout>
