--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,17 +10,16 @@
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/cardView"
-        android:layout_marginTop="34dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
         android:contentDescription="@string/logo"
         android:src="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="94dp"
+        android:layout_marginTop="200dp"
         android:fontFamily="cursive"
         android:lineSpacingExtra="36sp"
         android:text="@string/transportation_inc"
@@ -29,12 +28,11 @@
         android:typeface="monospace" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/username"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/imageView"
+        android:layout_marginTop="260dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="74dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_user"
         android:ems="10"
@@ -43,12 +41,11 @@
         android:textSize="16sp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/password"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_alignStart="@+id/editText"
-        android:layout_below="@+id/editText"
-        android:layout_marginTop="36dp"
+        android:layout_alignStart="@+id/username"
+        android:layout_marginTop="320dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_pass"
         android:ems="10"
@@ -56,37 +53,14 @@
         android:inputType="textPassword"
         android:textSize="16sp" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/editText2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="58dp"
-        app:cardBackgroundColor="@android:color/holo_red_light"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="10dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/login"
-                android:textColor="#fff"
-                android:textSize="18sp" />
-
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/LoggingButton"
+        android:layout_width="325dp"
+        android:layout_height="61dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="34dp"
-        android:text="@string/register_here" />
+        android:layout_marginBottom="47dp"
+        android:background="@android:color/holo_red_light"
+        android:text="@string/login" />
+
 </RelativeLayout>
