--- a/app/src/main/res/layout/activity_available_car_list.xml
+++ b/app/src/main/res/layout/activity_available_car_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
@@ -9,16 +10,26 @@
         android:id="@+id/carPictureView"
         android:layout_width="396dp"
         android:layout_height="188dp"
-        android:contentDescription="@string/car_picture" />
+        android:contentDescription="@string/car_picture"
+        />
 
     <TextView
         android:id="@+id/carManufacturer"
         android:layout_width="138dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="200dp"
-        android:layout_marginStart="25dp"
         android:text="@string/manufacturer"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/carManufacturerData"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="200dp"
+        android:layout_marginStart="220dp"
         android:textSize="20sp" />
 
     <TextView
@@ -27,18 +38,36 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="250dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="10dp"
         android:text="@string/model"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/carRegistartionNumber"
-        android:layout_width="200dp"
+        android:id="@+id/carModelData"
+        android:layout_width="138dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="25dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginStart="220dp"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/carRegistartionNumber"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="300dp"
         android:text="@string/registartion_number"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/carRegistartionNumberData"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="300dp"
+        android:layout_marginStart="220dp"
         android:textSize="20sp" />
 
     <TextView
@@ -47,8 +76,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="350dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="10dp"
         android:text="@string/caryear"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/carYearData"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="350dp"
+        android:layout_marginStart="220dp"
         android:textSize="20sp" />
 
     <TextView
@@ -57,8 +95,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="400dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="10dp"
         android:text="@string/price"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/carPriceData"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginStart="220dp"
         android:textSize="20sp" />
 
     <TextView
@@ -67,29 +114,59 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="450dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="10dp"
         android:text="@string/date_from"
         android:textSize="20sp" />
 
+    <TextView
+        android:id="@+id/DateFromData"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="450dp"
+        android:layout_marginStart="220dp"
+        android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/dateTo"
+        android:id="@+id/DateTo"
         android:layout_width="138dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="500dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="10dp"
         android:text="@string/date_to"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/PlaceToPickAcar"
-        android:layout_width="180dp"
+        android:id="@+id/DateToData"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="500dp"
+        android:layout_marginStart="220dp"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/PlaceWherePickACar"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="550dp"
+        android:text="@string/place_where_pick_a_car"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/PlaceWherePickACarData"
+        android:layout_width="138dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="550dp"
-        android:layout_marginStart="25dp"
-        android:text="@string/place_to_pick_a_car"
-        android:textSize="20sp" />
-
+        android:layout_marginStart="220dp"
+        android:text="@string/address"
+        android:onClick="onClick"
+        android:clickable="true"
+        android:textSize="20sp"
+        android:textColor="@android:color/holo_red_light"
+        android:focusable="true" />
 </RelativeLayout>
